--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "ruby",
+  "name": "bitch",
   "version": "2.0.0",
-  "description": "bot with lavalink made to impress fiancee.",
-  "main": "Ruby.js",
+  "description": "bot with lavalink.",
+  "main": "bitch.js",
   "nodemonConfig": {
     "ignore": [
       "./database/*.json"
     ]
   },
   "scripts": {
-    "start": "node Ruby.js"
+    "start": "node bitch.js"
   },
   "dependencies": {
     "anime-images-api": "^2.0.0",
@@ -42,6 +42,6 @@
     "eslint-plugin-react": "^7.24.0"
   },
   "keywords": [],
-  "author": "Tharki",
+  "author": "no",
   "license": "ISC"
 }
